objects/Payment_Response__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Responses</relationshipLabel>
        <relationshipName>Payment_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Code__c</fullName>
        <label>Authorization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Payment Responses</relationshipLabel>
        <relationshipName>Payment_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReceiveDate__c</fullName>
        <label>ReceiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Regulatory_Transaction_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Transaction Fee</label>
        <referenceTo>RegulatoryTrxnFee</referenceTo>
        <relationshipLabel>Payment Responses</relationshipLabel>
        <relationshipName>Payment_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponseData__c</fullName>
        <label>ResponseData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Settlement_Submission_Date__c</fullName>
        <label>Settlement Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Amount_Currency__c</fullName>
        <formula>Total_Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Amount__c</fullName>
        <label>Total Paid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ePay_Result_Message__c</fullName>
        <label>ePay Result Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ePay_Return_Code__c</fullName>
        <label>ePay Return Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hash__c</fullName>
        <label>hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>returnurl__c</fullName>
        <label>returnurl</label>
        <type>TextArea</type>
    </fields>
    <label>Payment Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PGR-{000000}</displayFormat>
        <label>Response #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>